@@ -1250,22 +1250,24 @@ static int gzfile_fgetc_internal(Rconnection con)
     return (c == EOF) ? R_EOF : c;
 }
 
+/* This can only seek forwards when writing (when it writes nul bytes).
+   When reading, it either seeks forwards of rewinds and reads again */
 static double gzfile_seek(Rconnection con, double where, int origin, int rw)
 {
     gzFile  fp = ((Rgzfileconn)(con->private))->fp;
     z_off_t pos = gztell(fp);
     int res, whence = SEEK_SET;
 
+    if (ISNA(where)) return (double) pos;
+
     switch(origin) {
-    case 2: whence = SEEK_CUR;
+    case 2: whence = SEEK_CUR; break;
     case 3: error(_("whence = \"end\" is not implemented for gzfile connections"));
     default: whence = SEEK_SET;
     }
-    if(where >= 0) {
-	res = gzseek(fp, (z_off_t) where, whence);
-	if(res == -1)
-	    warning(_("seek on a gzfile connection returned an internal error"));
-    }
+    res = gzseek(fp, (z_off_t) where, whence);
+    if(res == -1)
+	warning(_("seek on a gzfile connection returned an internal error"));
     return (double) pos;
 }
 
